# vetchat-ai

./: .env.example  .gitignore  ARLO_QA_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  Procfile  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py
backend/app/api/: auth.py  chat.py  conversations.py  ingest.py
backend/app/data/: emergency_keywords.json  system_prompt.txt
backend/app/ingestion/: chunker.py  embedder.py  pipeline.py  sciencedirect_client.py  springer_nature_client.py
backend/app/models/: chat.py  db.py  ingest.py
backend/app/services/: citation_builder.py  claude_service.py  disclaimer_injector.py  emergency_detector.py  evidence_tagger.py  fallback_generator.py  live_search.py  query_expander.py  reranker.py  retriever.py  species_filter.py  tox_intent.py  why_it_matters.py
backend/chroma_store/7cb52486-b749-46ca-930e-1cd0dcf2b511/: index_metadata.pickle
backend/data/: bench_queries.json  taylor_francis_journals.json  topic_queries.json
backend/data/mock/: dermatology.jsonl  respiratory.jsonl  toxicology.jsonl
backend/scripts/: bench_retrieval.py  ingest_crossref_tf.py  ingest_crossref_topic.py  ingest_crossref_tox.py  ingest_sciencedirect.py  inspect_corpus.py  seed_mock_data.py  seed_taylor_francis.py
backend/tests/: conftest.py  test_chat_endpoint.py  test_chat_reliability.py  test_claude_service.py  test_emergency_detector.py  test_evidence_tagger.py  test_ingestion.py  test_retriever.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
(+40 files in other folders)
